<resources>



    <string name="login_facebook">Ingresa con Facebook</string>
    <string name="login_us">Iniciar sesión</string>
    <string name="i_am_company">No tengo una cuenta</string>

    <string name="app_name">ReciclaT</string>
    <string name="action_settings">Settings</string>

    <string name="not_wifi">Sin conexión</string>
    <string name="instruction_wifi">Ingrese a settings y configura\nuna red wifi para continuar.</string>
    <string name="no_data">No se encontró datos</string>
    <string name="no_data_instructions">No contamos con\ninformación disponible\n en este momento.</string>
    <string name="message_text">Espere un momento</string>
    <string name="no_gps">No GPS</string>
    <string name="instructions_gps">Ingrese a settings\n y active su GPS.</string>
    <string name="singin">Ingresa con nosotros</string>
    <string name="singinWith">Ingresa con</string>
    <string name="singin_fb">Login con Facebook</string>
    <string name="mail">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="load">Cargando</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">Aceptar</string>
    <string name="register">Registrar</string>
    <string name="save">Guardar</string>
    <string name="error">Error</string>
    <string name="user">Usuario</string>

    <!--Login-->
    <string name="registerCompany">Soy Empresa/Organización</string>
    <string name="login">Ingresar</string>
    <string name="questionRegister">¿Aún no tienes una cuenta?</string>
    <string name="createAccount">Crear una cuenta</string>
    <string name="next">Continuar</string>
    <string name="textCompanyRegister">Creándote una cuenta en ReciclaT puedes
    acceder a la ubicación de los distintas empresas dedicadas al reciclaje
    y ayudar a aumentar esta comunidad. ¿Quieres saber cómo? No pierdas tiempo y create una cuenta</string>
    <string name="text_info_company">Si eres una empresa u organización ya constituida o quieres crear tu propio emprendimiento
         puedes crear y registrar tus empresas  para poder ser parte de la red de Reciclapp</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellidos</string>
    <string name="birthdate">Fecha Nacimiento</string>

    <!--Company-->
    <string name="detail_company">Detalle de la empresa</string>
    <string name="addres_company">Direción de la empresa</string>
    <string name="compandy_juridic">Empresa jurídica</string>
    <string name="type_company">Tipo de Empresa</string>
    <string name="type_company_legal">Empresa Juridica</string>
    <string name="type_company_reciclapp">PyMes dedicada al reciclaje</string>
    <string name="detail_type_company_legal">Empresa Juridica</string>
    <string name="detail_type_company_reciclapp">Empresa Reciclapp</string>
    <string name="compandy_reciclapp">Empresa Reciclapp</string>
    <string name="select_type_company">Seleccione una opción</string>
    <string name="name_company">Nombre de la empresa</string>
    <string name="map_company">Definir puntos en mapa</string>
    <string name="address_company">Dirección</string>
    <string name="phone_company">Teléfono</string>
    <string name="web_company">Web</string>
    <string name="hour_company">Horarios</string>
    <string name="create_company">Crear Empresa</string>
    <string name="RUC">RUC</string>

    <!--recycle-->
    <string name="recycle_me">Yo quiero reciclar</string>
    <string name="company_recycle">¿Qué podemos reciclar?</string>

    <string name="perm_camera">Se requieren permisos para poder acceder a la cámara</string>
    <string name="perm_external_storage">Se requieren permisos para poder acceder a la galería</string>
    <string name="perm_location">Se requieren permisos para poder acceder a su ubicación</string>

    <!--Menu-->
    <string name="explored">Explorar</string>
    <string name="my_account">Mi cuenta</string>
    <string name="information">Información</string>
    <string name="my_compay">Empresas</string>
    <string name="message">Mensajes</string>
    <string name="close_session">Cerrar Sesión</string>
    <string name="no_memory">Su dispositivo no tiene suficiente memoria libre
                                para realizar esta tarea, por favor utilice la galería para adjuntar la imagen de la compañía
                                </string>
    <string name="recicling">Fierros     S/. 3.5\nBaterias    S/. 1.5\nBotellas    S/. 2.5\nCatres    S/. 4.5
    </string>
    <string name="lorem">
        Un grupo de alumnos con 2 años de trabajo continuo en equipo.
    </string>
     <string name="lorem2">
        Realizamos proyectos tanto de Web como Android.
    </string>
    <string name="description1">PyMes dedicadas al reciclaje que no han sido
        registradas debidamente en la aplicacion</string>

    <string name="my_companies">Agregar un punto de reciclaje</string>
    <string name="facebook_app_id">1573247699633636</string>
    <array name="image_options">
        <item>Cámara</item>
        <item>Galería</item>
    </array>

    <array name="map_options">
        <item>Google Maps</item>
        <item>Waze</item>
    </array>

</resources>
