<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_explored"
            android:checked="false"
            android:title="@string/explored" />
        <item
            android:id="@+id/menu_my_account"
            android:checked="false"
            android:title="@string/my_account" />
        <item
            android:id="@+id/menu_information"
            android:checked="false"
            android:title="@string/information" />

    </group>

    <group  android:id="@+id/group2"
        android:checkableBehavior="single">
                       <item
                android:id="@+id/menu_close_session"
                android:checked="false"
                android:title="@string/close_session" />
    </group>
</menu>