<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <FrameLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="visible"
        android:id="@+id/frame_load"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_vertical"
            android:gravity="center_vertical"
            >

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center|center_horizontal"
                android:id="@+id/pb_load" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load"
                android:id="@+id/tv_load"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primary_light"
                android:gravity="center"
                android:layout_gravity="center_vertical|center|center_horizontal"
                android:visibility="visible" />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:id="@+id/frame_gps"
        android:visibility="visible"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_vertical"
            android:gravity="center_vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/no_gps"
                android:id="@+id/tv_no_gps"
                android:paddingBottom="5dp"
                android:textColor="@color/primary_light"
                android:gravity="top"
                android:layout_gravity="top|center" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/instructions_gps"
                android:id="@+id/tv_active_gps"
                android:paddingBottom="3dp"
                android:textColor="@color/primary_light"
                android:gravity="center"
                android:layout_gravity="center"
                android:visibility="visible" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:id="@+id/frame_no_network"
        android:visibility="visible"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_vertical"
            android:gravity="center_vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/not_wifi"
                android:id="@+id/tv_no_wifi"
                android:paddingBottom="3dp"
                android:textColor="@color/primary_light"
                android:gravity="center"
                android:layout_gravity="center" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/instruction_wifi"
                android:id="@+id/tv_instructions_wifi"
                android:paddingBottom="3dp"
                android:textColor="@color/primary_light"
                android:gravity="center"
                android:layout_gravity="center" />
        </LinearLayout>


    </FrameLayout>

    <FrameLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:id="@+id/frame_no_data"
        android:visibility="visible"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_vertical"
            android:gravity="center_vertical">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/no_data_instructions"
                android:id="@+id/tv_no_data"
                android:paddingBottom="3dp"
                android:textColor="@color/primary_light"

                android:gravity="center"
                android:layout_gravity="center" />
        </LinearLayout>


    </FrameLayout>

    <FrameLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:id="@+id/frame_message"
        android:visibility="visible"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_vertical"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/message_text"
                android:id="@+id/tv_text_message"
                android:paddingBottom="3dp"
                android:textColor="@color/primary_light"
                android:gravity="center"
                android:layout_gravity="center" />

        </LinearLayout>


    </FrameLayout>
</FrameLayout>