<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:background="@drawable/bground"
        android:id="@+id/frame_container"
        android:weightSum="1"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="150dp">
            <LinearLayout
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                style="@style/MyiCon"
                android:background="@drawable/edittext_default"
                android:layout_height="50dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/input_mail"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content" >
                        <EditText
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textIsSelectable="false"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="5dp"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:textSize="@dimen/primary_text"
                        android:imeOptions="actionNext"
                        android:nextFocusForward="@+id/etPassword"
                        android:gravity="left"
                        android:textColor="@color/primary_text"
                        android:textColorHint="@color/secondary_text"
                        android:background="@color/white"
                        android:inputType="textEmailAddress"
                        android:id="@+id/etEmail"
                        android:hint="@string/mail" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                style="@style/MyiCon"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_default">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/white"
                        android:gravity="left"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:textColor="@color/primary_text"
                        android:textColorHighlight="@color/white"
                        android:textColorHint="@color/secondary_text"
                        android:textSize="@dimen/primary_text" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/secondary_text"
                android:text="@string/error"
                android:visibility="gone"
                android:gravity="center"
                android:paddingTop="10dp"
                android:layout_gravity="center"
                android:id="@+id/tv_error" />

            <Button
                android:id="@+id/btn_login"
                style="@style/Btn"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/primary_text"
                android:layout_marginBottom="10dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textStyle="bold"
                android:textSize="@dimen/primary_text"
                android:text="@string/questionRegister"
                android:gravity="center"
                android:id="@+id/tv_info"
                android:layout_gravity="center"
                android:visibility="invisible"/>
            <Button
                style="@style/Btn"
                android:id="@+id/btn_create_account"
                android:text="@string/createAccount"
                android:textColor="@color/white"
                android:textSize="@dimen/primary_text"
                android:visibility="invisible"/>
            </LinearLayout>


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_transparent"
            android:padding="3dp"
            android:layout_gravity="left"
            android:src="@drawable/ic_action_arrow_left"
            android:layout_margin="10dp"
            android:id="@+id/btn_close"
            />
    </FrameLayout>


</LinearLayout>