<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/windows_backgroung"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frame_container"

        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:weightSum="1">

        <android.support.v7.widget.CardView
            style="@style/cardStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="0dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="top"
                android:orientation="vertical"
                android:padding="9dp">

                <TextView
                    android:id="@+id/tv_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_vertical"
                    android:padding="10dp"
                    android:text="@string/select_type_company"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/secondary_text" />


                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/action_reciclapp_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginTop="10dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="0dp"
                    card_view:cardBackgroundColor="@color/primary_dark"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardPreventCornerOverlap="true"
                    card_view:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="5dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="8dp">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:orientation="vertical">

                                <ImageView

                                    android:id="@+id/imageView"
                                    android:layout_width="100dp"
                                    android:layout_height="100dp"
                                    android:src="@drawable/ic_reciclat" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_weight="1"
                                android:orientation="vertical"
                                android:paddingLeft="10dp">

                                <TextView
                                    android:id="@+id/tv_company_reciclapp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/type_company_reciclapp"
                                    android:textColor="@color/primary_text"
                                    android:textSize="@dimen/primary_text"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/tv_detail_company_reciclapp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/description1"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/secondary_text" />

                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/action_juridic_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="0dp"
                    android:visibility="invisible"
                    card_view:cardBackgroundColor="@color/primary_dark"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardPreventCornerOverlap="true"
                    card_view:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="5dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="8dp">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:orientation="vertical">

                                <ImageView

                                    android:layout_width="100dp"
                                    android:layout_height="100dp"
                                    android:src="@drawable/iconotapa" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_weight="1"
                                android:orientation="vertical"
                                android:paddingLeft="10dp">

                                <TextView
                                    android:id="@+id/tv_type_company_legal"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/type_company_legal"
                                    android:textColor="@color/primary_text"
                                    android:textSize="@dimen/primary_text"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/tv_detail_company"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/lorem"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/secondary_text" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </FrameLayout>

    <include layout="@layout/toolbar"></include>

</LinearLayout>